# DeepLearningTools

./: .gitignore  README.md
animefacedetect/: README.md
animefacedetect/cpp/: CMakeLists.txt  animefacedetect.cpp
classify/: README.md  lovelive_cifar10_quick_iter_4000.caffemodel  lovelive_facedetection.py  lovelive_facedetection_on_videos.py  lovelive_mean.binaryproto
gen_features/: README.md  label.txt  train-labeled.csv  train.csv
gen_features/cpp/: CMakeLists.txt  argumentsparser.h  gen_features.cpp  train.cpp
make_train_data/: README.md  param.xml
make_train_data/cpp/: CMakeLists.txt  maketrain.cpp
